[gd_scene load_steps=8 format=2]

[ext_resource path="res://Tilemaps/bathroom.tsx" type="TileSet" id=1]
[ext_resource path="res://Player_Components/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/ApartmentBathroom.gd" type="Script" id=3]
[ext_resource path="res://Item_Components/InventoryItem.tscn" type="PackedScene" id=4]
[ext_resource path="res://Item_Components/Sprites/broom.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 36 )

[sub_resource type="RectangleShape2D" id=2]

[node name="ApartmentBathroom" type="Node2D"]
position = Vector2( 8, -16 )
script = ExtResource( 3 )

[node name="Layer 1" type="TileMap" parent="."]
position = Vector2( 40, 8 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 56, 0, 1, 56, 0, 2, 56, 0, 3, 56, 0, 4, 56, 0, 5, 56, 0, 6, 56, 0, 7, 56, 0, 8, 56, 0, 9, 56, 0, 10, 56, 0, 65536, 56, 0, 65537, 0, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 2, 0, 65546, 56, 0, 131072, 56, 0, 131073, 4, 0, 131074, 5, 0, 131075, 5, 0, 131076, 5, 0, 131077, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131081, 6, 0, 131082, 56, 0, 131083, 56, 0, 131084, 56, 0, 131085, 56, 0, 131086, 56, 0, 196608, 56, 0, 196609, 24, 0, 196610, 25, 0, 196611, 25, 0, 196612, 25, 0, 196613, 25, 0, 196614, 25, 0, 196615, 25, 0, 196616, 25, 0, 196617, 26, 0, 196618, 56, 0, 196619, 1, 0, 196620, 1, 0, 196621, 2, 0, 196622, 56, 0, 262144, 56, 0, 262145, 36, 0, 262146, 37, 0, 262147, 37, 0, 262148, 37, 0, 262149, 37, 0, 262150, 37, 0, 262151, 37, 0, 262152, 37, 0, 262153, 37, 0, 262154, 56, 0, 262155, 13, 0, 262156, 13, 0, 262157, 14, 0, 262158, 56, 0, 327680, 56, 0, 327681, 36, 0, 327682, 37, 0, 327683, 37, 0, 327684, 37, 0, 327685, 37, 0, 327686, 37, 0, 327687, 37, 0, 327688, 37, 0, 327689, 0, 0, 327690, 2, 0, 327691, 38, 0, 327692, 38, 0, 327693, 38, 0, 327694, 56, 0, 393216, 56, 0, 393217, 36, 0, 393218, 37, 0, 393219, 37, 0, 393220, 37, 0, 393221, 37, 0, 393222, 37, 0, 393223, 37, 0, 393224, 37, 0, 393225, 4, 0, 393226, 6, 0, 393227, 38, 0, 393228, 38, 0, 393229, 38, 0, 393230, 56, 0, 458752, 56, 0, 458753, 36, 0, 458754, 37, 0, 458755, 37, 0, 458756, 37, 0, 458757, 37, 0, 458758, 37, 0, 458759, 37, 0, 458760, 37, 0, 458761, 25, 0, 458762, 25, 0, 458763, 26, 0, 458764, 37, 0, 458765, 37, 0, 458766, 56, 0, 524288, 56, 0, 524289, 56, 0, 524290, 56, 0, 524291, 56, 0, 524292, 56, 0, 524293, 37, 0, 524294, 56, 0, 524295, 56, 0, 524296, 56, 0, 524297, 56, 0, 524298, 56, 0, 524299, 56, 0, 524300, 56, 0, 524301, 56, 0, 524302, 56, 0, 589828, 56, 0, 589829, 56, 0, 589830, 56, 0 )

[node name="Baseboard" type="TileMap" parent="."]
position = Vector2( 40, 8 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
show_collision = true
format = 1
tile_data = PoolIntArray( 131073, 134, 0, 131074, 121, 0, 131075, 121, 0, 131076, 121, 0, 131077, 121, 0, 131078, 121, 0, 131079, 121, 0, 131080, 121, 0, 131081, 132, 0, 262154, 134, 0, 262155, 121, 0, 262156, 121, 0, 262157, 132, 0, 393225, 134, 0, 393226, 132, 0 )

[node name="Broom" parent="." instance=ExtResource( 4 )]
position = Vector2( 252, 80 )
item_tooltip = "Broom"
item_id = "broom"
texture = ExtResource( 5 )

[node name="Layer 2" type="TileMap" parent="."]
position = Vector2( 40, 8 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65538, 29, 0, 65539, 30, 0, 65540, 11, 0, 65542, 113, 0, 65544, 104, 0, 65545, 105, 0, 131073, 39, 0, 131074, 41, 0, 131075, 42, 0, 131076, 22, 0, 131077, 28, 0, 131078, 125, 0, 131080, 116, 0, 131081, 117, 0, 196610, 32, 0, 196611, 33, 0, 196612, 46, 0, 196614, 137, 0, 196615, 124, 0, 196616, 128, 0, 196617, 129, 0, 196619, 102, 0, 196620, 103, 0, 262146, 44, 0, 262147, 45, 0, 262152, 140, 0, 262153, 141, 0, 262155, 114, 0, 262156, 115, 0, 262157, 31, 0, 327691, 32, 0, 327692, 33, 0, 327693, 43, 0, 393227, 44, 0, 393228, 45, 0, 458753, 124, 0 )

[node name="Layer 3" type="TileMap" parent="."]
position = Vector2( 40, 8 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65537, 73, 0, 65538, 67, 0, 65539, 67, 0, 65540, 67, 0, 65541, 67, 0, 65542, 67, 0, 65543, 67, 0, 65544, 67, 0, 65545, 72, 0, 131073, 51, 0, 131081, 50, 0, 196609, 51, 0, 196610, 53, 0, 196611, 54, 0, 196617, 50, 0, 196618, 83, 0, 196621, 72, 0, 262145, 51, 0, 262153, 50, 0, 262154, 95, 0, 262157, 48, 0, 327681, 51, 0, 327691, 126, 0, 327692, 127, 0, 327693, 48, 0, 393217, 51, 0, 393229, 48, 0, 458753, 51, 0, 458765, 48, 0, 524289, 61, 0, 524290, 67, 0, 524291, 67, 0, 524292, 64, 0, 524294, 65, 0, 524295, 67, 0, 524296, 67, 0, 524297, 67, 0, 524298, 67, 0, 524299, 67, 0, 524300, 67, 0, 524301, 60, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 128, 120 )

[node name="Walls" type="TileMap" parent="."]
position = Vector2( 40, 8 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65537, 73, 0, 65538, 67, 0, 65539, 67, 0, 65540, 67, 0, 65541, 67, 0, 65542, 67, 0, 65543, 67, 0, 65544, 67, 0, 65545, 72, 0, 131073, 51, 0, 131081, 50, 0, 196609, 51, 0, 196617, 50, 0, 196618, 83, 0, 196621, 72, 0, 262145, 51, 0, 262153, 50, 0, 262154, 95, 0, 262157, 48, 0, 327681, 51, 0, 327689, 0, 0, 327693, 48, 0, 393217, 51, 0, 393229, 48, 0, 458753, 51, 0, 458765, 48, 0, 524289, 61, 0, 524290, 67, 0, 524291, 67, 0, 524292, 64, 0, 524294, 65, 0, 524295, 67, 0, 524296, 67, 0, 524297, 67, 0, 524298, 67, 0, 524299, 67, 0, 524300, 67, 0, 524301, 60, 0 )

[node name="BathroomCameraTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BathroomCameraTrigger"]
position = Vector2( 160, 92 )
shape = SubResource( 1 )

[node name="BathroomCamera" type="Camera2D" parent="."]
position = Vector2( 152, 88 )

[node name="KitchenTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KitchenTrigger"]
position = Vector2( 128, 144 )
shape = SubResource( 2 )

[connection signal="area_entered" from="BathroomCameraTrigger" to="." method="_on_BathroomCameraTrigger_area_entered"]
[connection signal="body_entered" from="KitchenTrigger" to="." method="_on_KitchenTrigger_body_entered"]
